2006-05-11  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #339827
	* calendar/e-cal-backend-exchange-calendar.c: (add_vevent),
	(get_changed_events), (create_object), (modify_object),
	(modify_object_with_href), (remove_object), (receive_objects),
	(book_resource), (discard_alarm):
	* calendar/e-cal-backend-exchange-tasks.c: (get_changed_tasks),
	(create_task_object), (modify_task_object), (receive_task_objects),
	(remove_task_object):
	* calendar/e-cal-backend-exchange.c:
	(e_cal_backend_exchange_cache_sync_end),
	(e_cal_backend_exchange_cache_lock),
	(e_cal_backend_exchange_cache_unlock), (get_object),
	(get_object_list), (start_query), (init), (finalize):
	* calendar/e-cal-backend-exchange.h: Set the cache lock while
	accessing the components from the hash table.

2006-05-10  Vandana Shenoy B  <shvandana@novell.com>

	* addressbook/e-book-backend-exchange.c (proppatch_address): Added a
	check for modifying a contact. Fixes #330265.

2006-05-10  Sushma Rai  <rsushma@novell.com>

	* mail/mail-stub-exchange.c (subscribe_folder): Not adding toplevel
	"All Public Folders" to the list of favorite folders. Fixes #339277. 

2006-05-10  Sushma Rai  <rsushma@novell.com>

	* mail/mail-stub-exchange.c (unsubscribe_folder): Extracting the folder
	name instead of folder patch. Fixes the issue of unsubscribing the sub
	favorite folders. Related to bug #268412.

2006-05-04  Jeffrey Stedfast  <fejj@novell.com>

	Fix for the hang in Novell bug #166987

	* camel/camel-stub.c (status_main): Create a CamelOperation
	context so our main-loop/reads/writes can all be cancelled.
	(finalize): Call camel_operation_cancel() on the stub's
	CamelOperation so that the status_main thread exits more-or-less
	immediately rather than hanging indefinitely in a system read()
	call.

	* camel/camel-stub-marshal.c (do_read): Use camel_read() so the
	read is cancellable.
	(camel_stub_marshal_flush): Use camel_write().

2006-04-24  Chenthill Palanisamy  <pchenthill@novell.com>
